# fair-knGraph-enhanced-rag-system

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  evaluation.yaml  generation.yaml  kg_extraction.yaml  retrieval.yaml  wikidata_demographics.yaml
configs/experiments/: ablation_no_fairness.yaml  ablation_no_mst.yaml  baseline_naive.yaml  kg2rag_fair.yaml  kg2rag_standard.yaml
notebooks/: 01_data_exploration.ipynb  02_kg_analysis.ipynb  03_retrieval_comparison.ipynb  04_fairness_analysis.ipynb  05_ablation_study.ipynb  06_case_studies.ipynb  07_full_results_report.ipynb
outputs/: README.md  pipeline_manifest.json
outputs/evaluation_results/: combined_results.json
scripts/: build_index.py  download_data.py  evaluate.py  extract_kg.py  fetch_demographics.py  run_experiment.py  run_full_pipeline.py  run_generation.py  run_retrieval.py
src/fair_kg_rag/: __init__.py
src/fair_kg_rag/data/: __init__.py  corpus_manager.py  dataset_loader.py  preprocessor.py  wikidata_demographics.py
src/fair_kg_rag/evaluation/: __init__.py  accuracy_metrics.py  evaluator.py  fairness_metrics.py  retrieval_metrics.py  statistical_tests.py
src/fair_kg_rag/generation/: __init__.py  generator.py  llm_backend.py  prompt_templates.py  response_parser.py
src/fair_kg_rag/kg/: __init__.py  entity_linker.py  (+3 more)
tests/: conftest.py
tests/integration/: test_script_entrypoints.py
tests/unit/: test_evaluator.py  test_fairness_metrics.py  test_retrieval_metrics.py  test_statistical_tests.py
(+15 files in other folders)
